--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "stocks2",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,5 +11,32 @@
     "url": "https://github.com/npm/deprecate-holder/issues"
   },
   "homepage": "https://github.com/npm/deprecate-holder#readme",
-  "private": true
+  "private": true,
+  "dependencies": {
+    "@emailjs/browser": "^4.4.1",
+    "@emailjs/react-native": "^4.2.2",
+    "@expo/metro-runtime": "^5.0.4",
+    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-navigation/drawer": "^7.4.2",
+    "@react-navigation/material-top-tabs": "^7.2.15",
+    "@react-navigation/native": "^7.1.11",
+    "@react-navigation/stack": "^7.3.4",
+    "expo": "^53.0.11",
+    "expo-document-picker": "~13.1.5",
+    "expo-file-system": "~18.1.10",
+    "expo-status-bar": "~2.2.3",
+    "firebase": "^11.9.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-native": "0.79.3",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
+    "react-native-svg": "15.11.2",
+    "react-native-toast-message": "^2.3.0",
+    "react-native-web": "^0.20.0",
+    "react-native-webview": "13.13.5"
+  }
 }
