--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-svg": "15.11.2",
     "react-native-toast-message": "^2.3.0",
     "react-native-web": "^0.20.0",
-    "react-native-webview": "13.13.5"
+    "react-native-webview": "13.13.5",
+    "expo-constants": "~17.1.6"
   }
 }
